[package]
name = "rust-timelapse-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features=["multipart"]}
tokio = {version="1.43.0", features=["rt-multi-thread"]}
chrono = "0.4.39"
influxdb2 = "0.5.2"
futures = "0.3.31"
base64 = "0.22.1"
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-stdout = { version = "0.28.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", features = ["default", "grpc-tonic"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = "0.3.17"
